# job_search

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
backend/: __init__.py
backend/job_search/: __init__.py  cli.py  http.py  tool.py
backend/scripts/: __init__.py  euremotejobs_jd.py  euremotejobs_search.py  generic_jd.py  generic_search.py  job_filter.py  jobscz_jd.py  jobscz_search.py  linkedin_auth.py  linkedin_jd.py  linkedin_jd_scraper.py  linkedin_scraper.py  linkedin_search.py  scrape_utils.py  scraper_config.py  startupjobs_jd.py  startupjobs_search.py  validate_scrapers.py
backend/scripts/research/: __init__.py  base.py  crunchbase.py  g2.py  glassdoor.py  linkedin.py  remote.py
backend/server/: __init__.py  app.py  app_routes.py  applications.py  data.py  docx_export.py  models.py  routes.py  utils.py  websocket.py
extractors/: crunchbase.js  euremotejobs.js  g2.js  glassdoor.js  linkedin.js  linkedin_search.js  manifest.json
frontend/: eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  index.css
frontend/src/components/: ApplicationList.jsx  ApplicationPrepView.jsx  DeepDiveDetail.jsx  DeepDiveList.jsx  Filters.jsx  JobList.jsx  MarkdownContent.jsx  ResizableLayout.jsx  StepNav.jsx  VerdictBadge.jsx
references/: api.md
scripts/: setup.sh
skill/: SKILL.md
skill/references/: application.md  deep-dive.md  scraper-maintenance.md
skill/templates/: anti-positioning.md  base.md  star-bank.md
tests/: __init__.py  test_applications.py  test_remote_extractors.py  test_server_data.py
(+14 files in other folders)
